fixed z-index on show page; couldn't get description to show

--- a/frontend/src/components/GroupIndex/GroupIndex.css
+++ b/frontend/src/components/GroupIndex/GroupIndex.css
@@ -15,7 +15,7 @@
   border-radius: 6px;
   border-color: rosybrown;
   margin: 9px;
-  z-index: 1;
+  z-index: 2;
   
 }
 
@@ -28,4 +28,16 @@
 
 .imgPlaceholder {
   width: 100px;
+}
+
+.showImg {
+  z-index: 3;
+  width: 650px;
+  margin-left: 100px;
+  position: relative;
+  /* justify-content: center; */
+}
+
+.groupDes {
+  z-index: 3;
 }
