--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -29,6 +29,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 4;
 }
 
 .modal {
@@ -43,6 +44,7 @@
    align-items: center;
    padding: 50px;
    box-sizing: border-box;
+   z-index: 4;
 }
 
 .SU-label {
